clang/test/BSC/Negative/Ownership/Borrow/borrow_struct/borrow_struct.cbs
// RUN: %clang_cc1 -fsyntax-only -verify=expected %s -verify-ignore-unexpected=note

struct S {
    int *_Borrow b1;
    int *_Borrow b2;
};

struct T {
    struct S *sp;
    int *_Borrow p;
};

void use_borrow(int *_Borrow b) {}

void test() {
    int a = 0;
    int *_Borrow p = &_Mut a;

    struct S b = {.b1 = p, .b2 = p};
    // expected-error@-1 {{cannot use `p` because it was mutably borrowed}}
    // expected-error@-2 {{cannot borrow `*p` as mutable more than once at a time}}
    use_borrow(b.b1);

    int *_Borrow p1 = p;
    int *_Borrow p2 = p;
    // expected-error@-1 {{cannot use `p` because it was mutably borrowed}}
    // expected-error@-2 {{cannot borrow `*p` as mutable more than once at a time}}
    struct S b2 = {.b1 = p1, .b2 = p2};
    use_borrow(b2.b1);
}

void test2(){
    int a = 0;
    int *_Borrow p = &_Mut a;
    int *_Borrow arr[2] = {p, p};
    // expected-error@-1 {{cannot use `p` because it was mutably borrowed}}
    // expected-error@-2 {{cannot borrow `*p` as mutable more than once at a time}}
    use_borrow(arr[0]);
}

void test3(struct S s) {
    int a = 0;
    s.b1 = &_Mut a;
    struct T t = {.sp = &s, .p = &_Mut a};
    use_borrow(t.p);
}

void test4(struct S s) {
    int a = 0;
    s.b1 = &_Mut a;
    struct T t = {.sp = &s, .p = &_Mut a}; // expected-error {{cannot borrow `a` as mutable more than once at a time}}
    *(s.b1) = 2;
    use_borrow(t.p);
}

void test5(struct S s) {
    int a = 0;
    int b = 1;
    s.b1 = &_Mut a;
    struct T t = {.sp = &s, .p = &_Mut a}; // expected-error {{cannot borrow `a` as mutable more than once at a time}}
    s.b1 = &_Mut b;
    *(s.b2) = 2;
    use_borrow(t.p);
}

void test6(struct S s) {
    int a = 0;
    int b = 1;
    s.b1 = &_Mut b;
    struct T t = {.sp = &s, .p = &_Mut a};
    s.b1 = &_Mut b; // expected-error {{cannot borrow `b` as mutable more than once at a time}}
    *(s.b2) = 2;
    use_borrow(t.p);
}

int main() { return 0; }
